--- a/pages/faq.html
+++ b/pages/faq.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-
+    <script src = "../assets/js/nav.js"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
       <div class="container">
         <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
