--- a/pages/resources.html
+++ b/pages/resources.html
@@ -1,17 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resources • CampusLearn™</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
-    <link href="assets/css/styles.css" rel="stylesheet">
-  </head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script type="module" src="../assets/js/resources.js"></script>
 
+    <title>Resources • CampusLearn™</title>
+
+    <!-- Bootstrap & Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
+
+    <!-- Styles -->
+    <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon" />
+
+    <style>
+      body {
+        background-color: #f8fafc;
+        font-family: "Inter", sans-serif;
+      }
+
+      .page-header {
+        background: linear-gradient(90deg, #0044cc, #007bff);
+        color: #fff;
+        padding: 2rem 1rem;
+        border-radius: 0.75rem;
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+
+      .page-header h1 {
+        font-weight: 700;
+        font-size: 2rem;
+      }
+
+      .filter-bar {
+        background: #fff;
+        border-radius: 0.5rem;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+      }
+
+      .upload-card {
+        background: #fff;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+        transition: 0.3s;
+      }
+
+      .upload-card:hover {
+        transform: translateY(-3px);
+      }
+
+      .resource-card {
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.06);
+        transition: 0.3s;
+      }
+
+      .resource-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      footer {
+        background: #0044cc;
+        color: #fff;
+      }
+    </style>
+  </head>
+  <script src = "../assets/js/nav.js"></script>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
         <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav">
@@ -30,135 +94,58 @@
             <a href="register.html" class="btn btn-primary btn-sm">Register</a>
           </div>
         </div>
-        <div class="mb-2">
-          <label class="form-label">Type</label>
-          <select class="form-select" id="typeInput">
-            <option value="pdf">PDF</option>
-            <option value="video">Video</option>
-            <option value="link">External Link</option>
-          </select>
-        <div class="mb-2">
-            <label class="form-label">Upload file (PDF/Video) or leave blank for External Link</label>
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CampusLearn™ | Resources</title>
+      </div>
+    </nav>
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- App styles -->
-  <link rel="icon" href="assets/images/Favicon.png" />
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <meta name="color-scheme" content="light dark" />
-</head>
+    <!-- Header -->
+    <header class="page-header">
+      <div class="container">
+        <h1>Learning Resources</h1>
+        <p class="lead">Browse, upload, and share materials to help peers succeed.</p>
+      </div>
+    </header>
 
-<body class="bg-light">
-  <!-- NAV (loaded after auth to satisfy 'no nav before login') -->
-  <div id="clNavMount"></div>
-
-  <!-- PAGE ROOT (hidden until session confirmed) -->
-  <main id="pageRoot" class="container my-4 d-none">
-    <!-- Header + Search -->
-    <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center gap-3 mb-3">
-      <h2 class="fw-semibold m-0">Learning Resources 📚</h2>
-      <input type="text" id="searchInput" class="form-control w-100 w-md-50" placeholder="Search resources..." />
-    </div>
-
-    <!-- Filters -->
-    <div class="d-flex flex-wrap gap-2 mb-3">
-      <select id="moduleFilter" class="form-select w-auto">
-        <option value="">All Modules</option>
-        <!-- Options loaded dynamically from table -->
-      </select>
-      <select id="typeFilter" class="form-select w-auto">
-        <option value="">All Types</option>
-        <option value="pdf">PDF</option>
-        <option value="video">Video</option>
-        <option value="link">External Link</option>
-      </select>
-    </div>
-
-    <!-- Student hint (shown if role === 'student') -->
-    <div id="tutorHint" class="alert alert-info d-none" role="alert">
-      Want to upload? Apply to become a Tutor in your <a href="profile.html" class="alert-link">Profile</a>.
-    </div>
-
-    <!-- Resource cards -->
-    <div id="resourceContainer" class="row g-3"></div>
-
-    <!-- Pager -->
-    <div id="pager" class="d-flex justify-content-center my-3"></div>
-
-    <!-- Upload (visible only to tutor/admin) -->
-    <section class="mt-5">
-      <h5 class="mb-3">Upload a Resource (Tutors Only)</h5>
-      <form id="uploadForm" class="border p-3 rounded bg-white shadow-sm">
+    <!-- Main -->
+    <main class="container mb-5">
+      <!-- Filter/Search -->
+      <div class="filter-bar">
         <div class="row g-3">
-          <div class="col-12">
-            <label for="titleInput" class="form-label">Title</label>
-            <input type="text" class="form-control" id="titleInput" required>
+          <div class="col-md-4">
+            <label class="form-label fw-semibold">Search</label>
+            <input class="form-control" placeholder="e.g., normalization, UML" />
           </div>
-          <div class="col-12 col-md-6">
-            <label for="typeInput" class="form-label">Type</label>
-            <select class="form-select" id="typeInput">
-              <option value="pdf">PDF</option>
-              <option value="video">Video</option>
-              <option value="link">External Link</option>
+          <div class="col-md-4">
+            <label class="form-label fw-semibold">Module</label>
+            <select class="form-select">
+              <option>All</option>
+              <option>SE202</option>
+              <option>DB101</option>
+              <option>ITM300</option>
             </select>
           </div>
-          <div class="col-12 col-md-6">
-            <label for="fileInput" class="form-label">Upload file (PDF/Video)</label>
-            <input type="file" class="form-control" id="fileInput" accept=".pdf,video/*">
-            <div class="form-text">Leave empty if you’re adding an External Link.</div>
-          </div>
-          <div class="col-12">
-            <label for="urlInput" class="form-label">External URL</label>
-            <input type="url" class="form-control" id="urlInput" placeholder="https://example.com/my-resource">
-            <div class="form-text">Required for “External Link”. Optional for PDF/Video.</div>
-          </div>
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary w-100">Upload Resource</button>
+          <div class="col-md-4">
+            <label class="form-label fw-semibold">Type</label>
+            <select class="form-select">
+              <option>All</option>
+              <option>Video</option>
+              <option>PDF</option>
+              <option>Interactive</option>
+            </select>
           </div>
         </div>
-      </form>
-    </section>
-  </main>
+      </div>
 
-    <!-- Main content -->
-    <main class="container my-4">
-      <h1 class="h4 mb-4">Learning Materials</h1>
-
-      <!-- Search & Filters -->
-      <form class="row g-3 mb-3">
-        <div class="col-md-4">
-          <label class="form-label">Search</label>
-          <input class="form-control" placeholder="e.g., normalization, UML">
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Module</label>
-          <select class="form-select">
-            <option>All</option><option>SE202</option><option>DB101</option><option>ITM300</option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Type</label>
-          <select class="form-select">
-            <option>All</option><option>Video</option><option>PDF</option><option>Interactive</option>
-          </select>
-        </div>
-      </form>
-
-      <!-- 🔹 Upload Section -->
+      <!-- Upload Section -->
       <section class="mb-5">
-        <div class="card border-0 shadow-sm">
+        <div class="card upload-card">
           <div class="card-body">
-            <h5 class="card-title mb-3">Upload New Learning Material</h5>
+            <h5 class="card-title mb-3 text-primary"><i class="fa fa-upload me-2"></i>Upload New Learning Material</h5>
             <form id="uploadForm" class="row g-3">
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <label class="form-label">Module Code</label>
-                <input type="text" id="moduleCode" class="form-control" placeholder="e.g., DB101" required>
+                <input type="text" id="moduleCode" class="form-control" placeholder="e.g., DB101" required />
               </div>
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <label class="form-label">Type</label>
                 <select id="fileType" class="form-select" required>
                   <option value="">Select Type</option>
@@ -167,11 +154,18 @@
                   <option value="interactive">Interactive</option>
                 </select>
               </div>
-              <div class="col-md-4">
-                <label class="form-label">Choose File</label>
-                <input type="file" id="fileInput" class="form-control" required>
+              <div class="col-md-3">
+                <label class="form-label">Visibility</label>
+                <select id="visibility" class="form-select" required>
+                  <option value="private">Private (Only You)</option>
+                  <option value="public">Public (Shareable)</option>
+                </select>
               </div>
-              <div class="col-md-12">
+              <div class="col-md-3">
+                <label class="form-label">Choose File</label>
+                <input type="file" id="fileInput" class="form-control" required />
+              </div>
+              <div class="col-md-12 text-end">
                 <button type="submit" class="btn btn-primary">
                   <i class="fa fa-upload me-2"></i>Upload File
                 </button>
@@ -183,72 +177,48 @@
       </section>
 
       <!-- Existing Resources -->
-      <div class="row g-3">
-        <div class="col-md-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h6>Normalization 101</h6>
-              <p class="small">DB101 • PDF</p>
-              <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
+      <section>
+        <h4 class="mb-3 fw-semibold text-primary">Available Resources</h4>
+        <div class="row g-3">
+          <div class="col-md-4">
+            <div class="card resource-card h-100">
+              <div class="card-body">
+                <h6 class="fw-semibold">Normalization 101</h6>
+                <p class="small text-muted mb-2">DB101 • PDF</p>
+                <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card resource-card h-100">
+              <div class="card-body">
+                <h6 class="fw-semibold">Sequence Diagrams Explained</h6>
+                <p class="small text-muted mb-2">SE202 • Video</p>
+                <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card resource-card h-100">
+              <div class="card-body">
+                <h6 class="fw-semibold">Agile Estimation Exercise</h6>
+                <p class="small text-muted mb-2">SE202 • Interactive</p>
+                <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h6>Sequence Diagrams Explained</h6>
-              <p class="small">SE202 • Video</p>
-              <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h6>Agile Estimation Exercise</h6>
-              <p class="small">SE202 • Interactive</p>
-              <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      </section>
     </main>
 
     <!-- Footer -->
-    <footer class="mt-5 py-4 border-top">
-      <div class="container text-center text-muted small">
-        <div>© 2025 CampusLearn™ – Peer-Powered Learning for Belgium Campus</div>
-        <div class="mt-2">Prototype demo. Not connected to real services.</div>
+    <footer class="mt-5 py-4 text-center">
+      <div class="container small">
+        © 2025 CampusLearn™ – Peer-Powered Learning for Belgium Campus
       </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/resources.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
   </body>
-  <!-- Toast container -->
-  <div class="position-fixed bottom-0 end-0 p-3" style="z-index:1100">
-    <div id="clToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-      <div class="toast-header">
-        <strong class="me-auto" id="clToastTitle">Notice</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-      </div>
-      <div class="toast-body" id="clToastBody"></div>
-    </div>
-  </div>
-
-  <!-- JS (order matters) -->
-  <script src="assets/js/env.js"></script> <!-- real keys (ignored in git); ensure env.example.js is committed -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script>
-    // Create client early for resources.js
-    window.supabase = supabase.createClient(window.__ENV.SUPABASE_URL, window.__ENV.SUPABASE_ANON_KEY);
-  </script>
-
-  <!-- Bootstrap JS (for toasts) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Resources logic (final version you pasted earlier) -->
-  <script src="assets/js/resources.js" defer></script>
-</body>
 </html>
