--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Home • CampusLearn™</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
-    <link rel="icon" href="https://icons8.com/icon/79387/graduation-cap" type="image/x-icon">
-    <link href="assets/css/styles.css" rel="stylesheet">
     <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon">
+    <link href="assets/css/styles.css" rel="stylesheet">
     <style>
       .bg-darkened::before {
         content: '';
@@ -17,42 +16,42 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.5); /* Darkening overlay */
+        background: rgba(0, 0, 0, 0.5);
         z-index: 1;
-        border-radius: 15px; /* Rounded corners */
+        border-radius: 15px;
       }
       .bg-darkened {
         position: relative;
         background-image: url('https://images.unsplash.com/photo-1528980917907-8df7f48f6f2a?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-        background-size: contain; /* Show full image */
+        background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
-        border-radius: 15px; /* Rounded corners */
+        border-radius: 15px;
       }
       .bg-darkened .container-fluid {
         position: relative;
-        z-index: 2; /* Ensure content is above the overlay */
+        z-index: 2;
       }
       .bg-darkened .container-fluid h1,
       .bg-darkened .container-fluid p {
-        color: #F5F5F5; /* Smooth off-white text color */
+        color: #F5F5F5;
       }
       .bg-darkened .container-fluid .btn-primary,
       .bg-darkened .container-fluid .btn-outline-secondary {
-        color: #F5F5F5; /* Match button text color to off-white */
-        border-color: #F5F5F5; /* Ensure outline button border is visible */
+        color: #F5F5F5;
+        border-color: #F5F5F5;
       }
       .bg-darkened .container-fluid .btn-primary {
-        background-color: #0052cc; /* Slightly darker primary button for contrast */
+        background-color: #0052cc;
         border-color: #0052cc;
       }
       .bg-darkened .container-fluid .btn-outline-secondary:hover {
-        background-color: rgba(245, 245, 245, 0.2); /* Subtle hover effect */
+        background-color: rgba(245, 245, 245, 0.2);
         color: #F5F5F5;
       }
       #clTestimonials .blockquote {
-        height: 180px; /* Height to fit all content */
-        overflow: hidden; /* Handle overflow content */
+        height: 180px;
+        overflow: hidden;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -60,14 +59,14 @@
       #clTestimonials .blockquote-footer {
         display: flex;
         align-items: center;
-        gap: 10px; /* Space between image and text */
-        margin-top: 15px; /* Space between comment content and footer */
-        margin-bottom: 10px; /* Added space below footer */
+        gap: 10px;
+        margin-top: 15px;
+        margin-bottom: 10px;
       }
       #clTestimonials .profile-pic {
         width: 40px;
         height: 40px;
-        border-radius: 50%; /* Circular profile picture */
+        border-radius: 50%;
         object-fit: cover;
       }
     </style>
@@ -80,13 +79,6 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="clNav">
-         <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="pages/topics.html">Topics</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/forum.html">Forum</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/resources.html">Resources</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/faq.html">FAQ</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/messages.html">Messages</a></li>
-          </ul> -->
           <div class="d-flex gap-2">
             <a href="pages/login.html" class="btn btn-outline-primary btn-sm">Log in</a>
             <a href="pages/register.html" class="btn btn-primary btn-sm">Register</a>
@@ -95,14 +87,13 @@
       </div>
     </nav>
 
-
     <main class="container my-4">
       <div class="p-5 mb-4 bg-light bg-darkened">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Empowering Student Success Through Peer‑Powered Learning</h1>
           <p class="col-md-8 fs-5">CampusLearn™ connects Belgium Campus students with approved peer tutors for BCom, BIT and Diploma modules. Get help anytime — via topics, forums, resources and private messaging.</p>
-          <a class="btn btn-primary btn-lg" href="/pages/register.html">Get Started</a>
-          <a class="btn btn-outline-secondary btn-lg" href="/pages/forum.html">Ask the Forum</a>
+          <a class="btn btn-primary btn-lg" href="pages/register.html">Get Started</a>
+          <a class="btn btn-outline-secondary btn-lg" href="pages/forum.html">Ask the Forum</a>
         </div>
       </div>
 
@@ -112,7 +103,7 @@
             <div class="card-body">
               <h5 class="card-title"><i class="fa-solid fa-user-plus me-2"></i>Join as Student</h5>
               <p>Create a profile, subscribe to topics, ask questions, and track tutor responses.</p>
-              <a href="/pages/register.html" class="btn btn-primary btn-sm">Create account</a>
+              <a href="pages/register.html" class="btn btn-primary btn-sm">Create account</a>
             </div>
           </div>
         </div>
@@ -121,7 +112,7 @@
             <div class="card-body">
               <h5 class="card-title"><i class="fa-solid fa-chalkboard-user me-2"></i>Become a Tutor</h5>
               <p>Apply to tutor modules you are registered for, upload resources, and help peers succeed.</p>
-              <a href="/pages/tutor-dashboard.html" class="btn btn-outline-primary btn-sm">Tutor console</a>
+              <a href="pages/tutor-dashboard.html" class="btn btn-outline-primary btn-sm">Tutor console</a>
             </div>
           </div>
         </div>
@@ -130,7 +121,7 @@
             <div class="card-body">
               <h5 class="card-title"><i class="fa-regular fa-comments me-2"></i>Public Forum</h5>
               <p>Ask anonymously, upvote helpful answers, and explore trending questions.</p>
-              <a href="/pages/forum.html" class="btn btn-outline-secondary btn-sm">Open forum</a>
+              <a href="pages/forum.html" class="btn btn-outline-secondary btn-sm">Open forum</a>
             </div>
           </div>
         </div>
@@ -139,46 +130,7 @@
       <section class="mt-5" id="clFeaturedTutors">
         <h2 class="h4 mb-3">Meet Our Top Tutors</h2>
         <div class="row g-4">
-          <div class="col-md-3">
-            <div class="card h-100">
-              <img src="https://plus.unsplash.com/premium_photo-1682096410067-6073d1f558fe?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Tutor Sarah M.">
-              <div class="card-body">
-                <h5 class="card-title">Sarah M.</h5>
-                <p class="card-text">BIT Year 2, specializing in Programming & Database Systems.</p>
-                <a href="/pages/tutor-profile.html?id=1" class="btn btn-outline-primary btn-sm">View Profile</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card h-100">
-              <img src="https://images.unsplash.com/photo-1723612102452-e8419d280ea9?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Tutor James K.">
-              <div class="card-body">
-                <h5 class="card-title">Mandy K.</h5>
-                <p class="card-text">BCom Year 3, expert in Financial Management.</p>
-                <a href="/pages/tutor-profile.html?id=2" class="btn btn-outline-primary btn-sm">View Profile</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card h-100">
-              <img src="https://plus.unsplash.com/premium_photo-1723575669052-c6fceafc6fa8?q=80&w=1154&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Tutor Lerato N.">
-              <div class="card-body">
-                <h5 class="card-title">Olivia N.</h5>
-                <p class="card-text">Diploma in IT, skilled in Network Security.</p>
-                <a href="/pages/tutor-profile.html?id=3" class="btn btn-outline-primary btn-sm">View Profile</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card h-100">
-              <img src="https://images.unsplash.com/photo-1568602471122-7832951cc4c5?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Tutor Michael T.">
-              <div class="card-body">
-                <h5 class="card-title">Michael T.</h5>
-                <p class="card-text">BIT Year 3, adept at Web Development.</p>
-                <a href="/pages/tutor-profile.html?id=4" class="btn btn-outline-primary btn-sm">View Profile</a>
-              </div>
-            </div>
-          </div>
+          <!-- Tutors will be dynamically inserted here -->
         </div>
       </section>
 
@@ -190,7 +142,7 @@
               <div class="card-body">
                 <h5 class="card-title">Introduction to Programming</h5>
                 <p class="card-text">Discuss Python, Java, and C++ fundamentals with 120+ active threads.</p>
-                <a href="/pages/topics.html?topic=programming" class="btn btn-outline-secondary btn-sm">Join Discussion</a>
+                <a href="pages/topics.html?topic=programming" class="btn btn-outline-secondary btn-sm">Join Discussion</a>
               </div>
             </div>
           </div>
@@ -199,7 +151,7 @@
               <div class="card-body">
                 <h5 class="card-title">Financial Accounting</h5>
                 <p class="card-text">Explore balance sheets, ledgers, and more with 80+ active threads.</p>
-                <a href="/pages/topics.html?topic=accounting" class="btn btn-outline-secondary btn-sm">Join Discussion</a>
+                <a href="pages/topics.html?topic=accounting" class="btn btn-outline-secondary btn-sm">Join Discussion</a>
               </div>
             </div>
           </div>
@@ -209,33 +161,7 @@
       <section class="mt-5" id="clTestimonials">
         <h2 class="h4 mb-3">What Students Say</h2>
         <div class="row g-4">
-          <div class="col-md-4">
-            <blockquote class="blockquote p-3 bg-light rounded">
-              <p>"CampusLearn helped me ace my Programming module with real-time tutor support!"</p>
-              <footer class="blockquote-footer">
-                <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=40&auto=format&fit=crop" class="profile-pic" alt="Emma L.">
-                Emma L., BIT Student
-              </footer>
-            </blockquote>
-          </div>
-          <div class="col-md-4">
-            <blockquote class="blockquote p-3 bg-light rounded">
-              <p>"The forum is a lifesaver for quick answers, and the resources are top-notch. Happy to be here"</p>
-              <footer class="blockquote-footer">
-                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=40&auto=format&fit=crop" class="profile-pic" alt="Thabo S.">
-                Thabo S., BCom Student
-              </footer>
-            </blockquote>
-          </div>
-          <div class="col-md-4">
-            <blockquote class="blockquote p-3 bg-light rounded">
-              <p>"Being a tutor on CampusLearn is rewarding and improved my own understanding."</p>
-              <footer class="blockquote-footer">
-                <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?q=80&w=40&auto=format&fit=crop" class="profile-pic" alt="Aisha R.">
-                Aisha R., Diploma Student
-              </footer>
-            </blockquote>
-          </div>
+          <!-- Testimonials will be dynamically inserted here -->
         </div>
       </section>
 
@@ -252,10 +178,10 @@
       <section class="mt-5" id="clQuickLinks">
         <h2 class="h4 mb-3">Quick Links</h2>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><a href="/pages/support.html">Contact Support</a></li>
-          <li class="list-group-item"><a href="/pages/privacy.html">Privacy Policy</a></li>
-          <li class="list-group-item"><a href="/pages/terms.html">Terms of Service</a></li>
-          <li class="list-group-item"><a href="/pages/about.html">About CampusLearn</a></li>
+          <li class="list-group-item"><a href="pages/support.html">Contact Support</a></li>
+          <li class="list-group-item"><a href="pages/privacy.html">Privacy Policy</a></li>
+          <li class="list-group-item"><a href="pages/terms.html">Terms of Service</a></li>
+          <li class="list-group-item"><a href="pages/about.html">About CampusLearn</a></li>
         </ul>
       </section>
 
@@ -272,10 +198,11 @@
         <div class="mt-2">Prototype demo. Not connected to real services.</div>
       </div>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/env.js"></script>
-    <script type="module" src="./vendor/bootstrap/js/supabaseClient.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+    <script src="scripts/SupabaseClient.js"></script>
+    <script src="scripts/Fetch_tutors_and_testimonials.js" defer></script>
   </body>
 </html>
