--- a/pages/profile.html
+++ b/pages/profile.html
@@ -23,74 +23,79 @@
           <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
           <li class="nav-item"><a class="nav-link" href="messages.html">Messages</a></li>
         </ul>
-        <div class="d-flex gap-2">
-          <a href="login.html" class="btn btn-outline-primary btn-sm">Login</a>
-          <a href="register.html" class="btn btn-primary btn-sm">Register</a>
-        </div>
+        
       </div>
     </div>
   </nav>
 
  
   <main class="container my-5">
-    <h1 class="mb-4 text-center text-primary fw-bold">Tutor Profile</h1>
-    <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <div class="card border-0 shadow-lg rounded-4">
-          <div class="card-body p-4">
-            <div class="text-center mb-4">
-              <img id="profileImage" src="../assets/images/default-avatar.png" alt="Profile Picture"
-                   class="rounded-circle border shadow-sm" width="150" height="150" style="object-fit: cover;">
-              <div class="mt-3">
-                <label for="profilePicInput" class="btn btn-outline-primary btn-sm">Change Picture</label>
-                <input type="file" id="profilePicInput" accept="image/*" hidden>
-              </div>
-            </div>
-
-            <form id="profileForm">
-              <div class="row g-3">
-                <div class="col-md-4">
-                  <label for="firstName" class="form-label">First Name</label>
-                  <input type="text" id="firstName" class="form-control" placeholder="First name" required>
-                </div>
-                <div class="col-md-4">
-                  <label for="middleName" class="form-label">Middle Name (Optional)</label>
-                  <input type="text" id="middleName" class="form-control" placeholder="Middle name">
-                </div>
-                <div class="col-md-4">
-                  <label for="lastName" class="form-label">Last Name</label>
-                  <input type="text" id="lastName" class="form-control" placeholder="Last name" required>
-                </div>
-              </div>
-
-              <div class="row g-3 mt-3">
-                <div class="col-md-6">
-                  <label for="gender" class="form-label">Gender</label>
-                  <select id="gender" class="form-select" required>
-                    <option value="">Select Gender</option>
-                    <option>Male</option>
-                    <option>Female</option>
-                    <option>Other</option>
-                  </select>
-                </div>
-                <div class="col-md-6">
-                  <label for="phone" class="form-label">Phone Number</label>
-                  <input type="tel" id="phone" class="form-control" placeholder="11-digit number"
-                         maxlength="11" pattern="\\d{11}" required>
-                </div>
-              </div>
-
-              <div class="text-center mt-4">
-                <button type="submit" class="btn btn-primary px-4">Save Changes</button>
-              </div>
-            </form>
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+      <h3 class="text-center mb-4">Tutor Profile</h3>
+      <form id="profileForm" class="border rounded p-4 bg-light shadow-sm">
+        <div class="text-center mb-3">
+          <img
+            id="profileImage"
+            src="../assets/images/default-avatar.png"
+            class="rounded-circle border"
+            alt="Profile Picture"
+            width="120"
+            height="120"
+          />
+          <div class="mt-2">
+            <input type="file" id="profilePicInput" accept="image/*" />
           </div>
         </div>
-      </div>
-    </div>
-  </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/profile.js"></script>
+        <div class="row mb-3">
+          <div class="col-md-4">
+            <label class="form-label">First Name</label>
+            <input type="text" id="firstName" class="form-control" required />
+          </div>
+          <div class="col-md-4">
+            <label class="form-label">Middle Name</label>
+            <input type="text" id="middleName" class="form-control" />
+          </div>
+          <div class="col-md-4">
+            <label class="form-label">Last Name</label>
+            <input type="text" id="lastName" class="form-control" required />
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-md-6">
+            <label class="form-label">Gender</label>
+            <select id="gender" class="form-select" required>
+              <option value="">Select Gender</option>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+              <option value="Other">Other</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label class="form-label">Phone Number</label>
+            <input
+              type="tel"
+              id="phone"
+              class="form-control"
+              maxlength="11"
+              pattern="\\d{11}"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary px-4">Save Changes</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="../js/profile.js"></script>
+
 </body>
 </html>
